--- a/app/design/install/default/default/template/install/db/pgsql.phtml
+++ b/app/design/install/default/default/template/install/db/pgsql.phtml
@@ -15,28 +15,56 @@
  */
 ?>
 <li>
-    <label for="host"><?= $this->__('Host') ?> <span class="required">*</span></label>
-    <input type="text" name="connection[<?= $this->getIdPrefix()?>][db_host]" id="host" value="<?= $this->getFormData()->getDbHost() ?: 'localhost' ?>" title="<?= $this->quoteEscape($this->__('Database host')) ?>" class="required-entry input-text" />
+    <label for="pgsql_host"><?= $this->__('Host') ?></label>
+    <input type="text"
+           name="connection[<?= $this->getIdPrefix() ?>][db_host]"
+           id="pgsql_host"
+           value="<?= $this->getFormData()->getDbHost() ?: 'localhost' ?>"
+           title="<?= $this->quoteEscape($this->__('Database host')) ?>"
+           class="input-text"
+           required>
     <p class="field-note">
-        <small><?= $this->__('You can specify server port, ex.: localhost:5432') ?></small>
+        <?= $this->__('You can specify server port, ex.: localhost:5432') ?>
     </p>
 </li>
 <li>
-    <label for="dbname"><?= $this->__('Database Name') ?> <span class="required">*</span></label>
-    <input type="text" name="connection[<?= $this->getIdPrefix()?>][db_name]" id="dbname" value="<?= $this->getFormData()->getDbName() ?>" title="<?= $this->quoteEscape($this->__('Database Name')) ?>" class="required-entry input-text" />
+    <label for="pgsql_dbname"><?= $this->__('Database Name') ?></label>
+    <input type="text"
+           name="connection[<?= $this->getIdPrefix() ?>][db_name]"
+           id="pgsql_dbname"
+           value="<?= $this->getFormData()->getDbName() ?>"
+           title="<?= $this->quoteEscape($this->__('Database Name')) ?>"
+           class="input-text"
+           required>
 </li>
 <li>
-    <label for="user"><?= $this->__('User Name') ?> <span class="required">*</span></label>
-    <input type="text" name="connection[<?= $this->getIdPrefix()?>][db_user]" id="user" value="<?= $this->getFormData()->getDbUser() ?: 'postgres' ?>" title="<?= $this->quoteEscape($this->__('Database user name')) ?>" class="required-entry input-text" />
+    <label for="pgsql_user"><?= $this->__('User Name') ?></label>
+    <input type="text"
+           name="connection[<?= $this->getIdPrefix() ?>][db_user]"
+           id="pgsql_user"
+           value="<?= $this->getFormData()->getDbUser() ?: 'postgres' ?>"
+           title="<?= $this->quoteEscape($this->__('Database user name')) ?>"
+           class="input-text"
+           required>
 </li>
 <li>
-    <label for="password"><?= $this->__('User Password') ?></label>
-    <input type="password" name="connection[<?= $this->getIdPrefix()?>][db_pass]" id="password" value="" title="<?= $this->quoteEscape($this->__('Database user password')) ?>" class="input-text" />
+    <label for="pgsql_password"><?= $this->__('User Password') ?></label>
+    <input type="password"
+           name="connection[<?= $this->getIdPrefix() ?>][db_pass]"
+           id="pgsql_password"
+           value=""
+           title="<?= $this->quoteEscape($this->__('Database user password')) ?>"
+           class="input-text">
 </li>
 <li>
-    <label for="prefix"><?= $this->__('Tables Prefix') ?></label>
-    <input type="text" name="connection[<?= $this->getIdPrefix()?>][db_prefix]" id="prefix" value="<?= $this->getFormData()->getDbPrefix() ?>" title="<?= $this->quoteEscape($this->__('Tables Prefix')) ?>" class="validate-data input-text" />
+    <label for="pgsql_prefix"><?= $this->__('Tables Prefix') ?></label>
+    <input type="text"
+           name="connection[<?= $this->getIdPrefix() ?>][db_prefix]"
+           id="pgsql_prefix"
+           value="<?= $this->getFormData()->getDbPrefix() ?>"
+           title="<?= $this->quoteEscape($this->__('Tables Prefix')) ?>"
+           class="input-text">
     <p class="field-note">
-        <small><?= $this->__('(Optional. Leave blank for no prefix)') ?></small>
+        <?= $this->__('(Optional. Leave blank for no prefix)') ?>
     </p>
 </li>
