--- a/app/design/install/default/default/template/install/locale.phtml
+++ b/app/design/install/default/default/template/install/locale.phtml
@@ -23,15 +23,15 @@
 <div class="form-list">
     <ul>
         <li>
-            <label for="locale"><?= $this->__('Locale') ?> <span class="required">*</span></label>
+            <label for="locale"><?= $this->__('Locale') ?></label>
             <?= $this->getLocaleSelect() ?>
         </li>
         <li>
-            <label for="timezone"><?= $this->__('Time Zone') ?> <span class="required">*</span></label>
+            <label for="timezone"><?= $this->__('Time Zone') ?></label>
             <?= $this->getTimezoneSelect() ?>
         </li>
         <li>
-            <label for="currency"><?= $this->__('Default Currency') ?> <span class="required">*</span></label>
+            <label for="currency"><?= $this->__('Default Currency') ?></label>
             <?= $this->getCurrencySelect() ?>
         </li>
     </ul>
@@ -41,20 +41,13 @@
     <button class="form-button" type="submit"><span><?= $this->__('Continue') ?></span></button>
 </div>
 </form>
-<script type="text/javascript">
-    const changeLocale = (event) => {
-        const elem = event.target;
-        if (elem) {
-            const timezoneValue = document.getElementById('timezone').value;
-            const currencyValue = document.getElementById('currency').value;
-            const url = `<?= $this->getChangeUrl() ?>locale/${elem.value}/?timezone=${timezoneValue}&currency=${currencyValue}`;
-            window.location.href = url;
-        }
-    };
-
-    const dataForm = new VarienForm('form-validate');
-    const localeElement = document.getElementById('locale');
-    if (localeElement) {
-        localeElement.addEventListener('change', changeLocale);
-    }
+<script type="module">
+    const localeSelect = document.querySelector('#locale');
+    localeSelect?.addEventListener('change', () => {
+        const params = new URLSearchParams({
+            timezone: document.querySelector('#timezone').value,
+            currency: document.querySelector('#currency').value
+        });
+        window.location.href = `<?= $this->getChangeUrl() ?>locale/${localeSelect.value}/?${params}`;
+    });
 </script>
