refactor(installer): Restructure block names

--- a/app/design/install/default/default/template/page/complete.phtml
+++ b/app/design/install/default/default/template/page/complete.phtml
@@ -9,7 +9,7 @@
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
-/** @var Mage_Install_Block_End $this */
+/** @var Mage_Install_Block_Complete $this */
 ?>
 <script type="module">
     document.querySelector('.header')?.classList.add('hidden');
